# medical_api

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerrun.aws.json  Procfile  README.md  TESTS.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  reset_docker_db.sh  run_tests.sh  setup.sh
.ebextensions/: django.config
.github/workflows/: .gitkeep  django-ci-cd.yml  django-ci.yml
.platform/hooks/postdeploy/: 01_django_commands.sh
appointments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_remove_appointment_notes.py
core/: settings.py  test_settings.py  urls.py
core/management/commands/: __init__.py  reset_db.py
core/settings/: __init__.py  base.py  development.py  production.py  testing.py
pages/: views.py
professionals/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
professionals/migrations/: 0001_initial.py  0002_alter_professional_options_and_more.py  0003_alter_professional_contact.py  0004_alter_professional_contact.py  0005_professional_specialty.py
static/css/: main.css
templates/: base.html
templates/pages/: home.html  professional_detail.html  professional_list.html
tests/: factories.py
